[package]
name = "zap-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10"
jupiter = { path = "../libs/jupiter" }
ruint = { workspace = true }
num_enum = "0.7"
solana-account-info = "2"
solana-instruction = "2"
solana-program = "2"
solana-program-error = "2"
solana-pubkey = "2"
spl-associated-token-account = "6"
thiserror = "2"
