[package]
name = "zap"
version = "0.2.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zap"

[features]
default = []
local = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true, features = [] }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
dlmm = { path = "../../libs/dlmm" }
damm-v2 = { git = "https://github.com/MeteoraAg/damm-v2", features = [
    "cpi",
], rev = "d9cef5aaec9cfa1a6d3b0b28d213c87c285127de", package = "cp-amm" }
ruint = "1.3.0"
