[package]
name = "zap"
version = "0.2.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zap"

[features]
default = []
local = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true, features = [] }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
dlmm = { path = "../../libs/dlmm" }
damm-v2 = { git = "https://github.com/MeteoraAg/damm-v2", features = [
    "cpi",
], rev = "58a13fcf45516a9f27f2bd2a2056fb66673454e0", package = "cp-amm" }
ruint = { workspace = true }
zap-sdk = { path = "../../zap-sdk" }
